--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0"
+    "react": "19.0.0-rc-70fb1363-20241010",
+    "react-dom": "19.0.0-rc-70fb1363-20241010",
+    "next": "15.0.0-canary.186"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -21,6 +21,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0"
+    "eslint-config-next": "15.0.0-canary.186"
   }
 }
