--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "next": "15.0.0-canary.186",
     "react": "19.0.0-rc-70fb1363-20241010",
     "react-dom": "19.0.0-rc-70fb1363-20241010",
-    "next": "15.0.0-canary.186"
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.0-canary.186",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.0-canary.186"
+    "typescript": "^5"
   }
 }
