--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
     "next": "15.0.0-canary.186",
     "react": "19.0.0-rc-70fb1363-20241010",
